added execution goals to maven IT profile.